# gitui

./: CONTEXT.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
docs/adr/: 0001-semantic-hit-targets.md  0002-repository-operation-state.md  0003-preview-presentation.md  0004-scoped-repository-refresh.md  0005-workspace-focus-state.md
src/: app.rs  diagnostics.rs  filesystem.rs  formatter.rs  git.rs  main.rs  process.rs  repo_path.rs  repository_session.rs  restart.rs  selection.rs  theme.rs  theme_builtins.rs  tree.rs  ui.rs
src/app/: actions.rs  author_filter.rs  changes.rs  commit_message.rs  commit_summary.rs  explorer.rs  file_search.rs  files.rs  fuzzy.rs  herdr_prompt.rs  mouse.rs  repository_browser.rs  repository_picker.rs  settings.rs  text_input.rs  workspace_panel.rs
src/app/changes/: preview_loader.rs
src/app/workspace_panel/: herdr.rs  presets.rs
src/git/: graph.rs  inventory.rs
src/ui/: changes.rs  history.rs  overlays.rs  preview.rs  tests.rs  text.rs  workspace_panel.rs
src/ui/text/: markdown.rs  syntax.rs
tickets/: 001-branch-review-mode.md  002-visual-commit-stack-editor.md  003-terminal-png-preview.md  004-remote-file-paste.md
