[package]
name = "gitui"
version = "0.1.0"
edition = "2024"
description = "A focused Ratatui worktree and Git graph"
license = "MIT"

[[bin]]
name = "gitui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
crossterm = "0.29"
ratatui = "0.30"
serde_json = "1.0"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.20"
