[package]
name = "hunkle"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "hunkle"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
atomic-write-file = "0.3"
base64 = "0.22"
crossterm = "0.29"
process-wrap = { version = "9.1", default-features = false, features = ["std", "process-group", "job-object"] }
pulldown-cmark = "0.13"
ratatui = "0.30"
serde_json = "1.0"
unicode-width = "0.2"
unicode-segmentation = "1"

[dev-dependencies]
tempfile = "3.20"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
